alternate day 01 solution 01

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,8 @@
     "noImplicitReturns": true,
     "skipLibCheck": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "ts-node": {
+    "esm": true
+  }
 }
