--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
     "typescript": "^4.9.3",
     "vite": "^3.2.3",
     "vitest": "^0.25.3"
+  },
+  "prettier": {
+    "printWidth": 90,
+    "semi": false,
+    "singleQuote": true
   }
 }
